--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 body {
-	background-color: white;
+	background-color: black;
 	font-size: 12;
-	font-color: black;
+	font-color: white;
 }
 
 .img-circle {
