--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,9 @@
 body {
 	background-color: black;
 	font-size: 12;
-	font-color: white;
+	font-color: #B22222;
 	font-style: helvetica neue;
-	
+
 }
 
 .img-circle {
